--- a/WebContent/resource/petition/petition.css
+++ b/WebContent/resource/petition/petition.css
@@ -56,11 +56,15 @@ ul.petition-state-list > li {display: inline-block;}
 .petition-header-right {display: inline-block;float: left;width: 30%;}
 
 .petition-title-area {
-    border-bottom: 2px solid #999;
+    /* border-bottom: 2px solid #999; */
     padding: 10px;
     height: 90px;
     text-align: left;
-    font-size: 24px;
+    font-size: 22px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    word-wrap: normal;
+    overflow: hidden;
 }
 
 span.petition-category {
@@ -88,14 +92,31 @@ span.petition-title {
 
 .petition-calendar {
     padding: 10px;
-    text-align: left;
-    margin-top: 10px;
+    text-align: center;
+    margin-top: 30px;
 }
-
+.petition-state-area {
+    margin: 50px 0;
+}
 .petition-calendar-date, .petition-calendar-separator {
     display: inline-block;
 }
+.petition-title-area {
+    width: calc(100% - 70px);
+    display: inline-block;
+    vertical-align: top;
+}
 
+span.petition-dday {
+    width: 60px;
+    display: inline-block;
+    vertical-align: bottom;
+    height: 60px;
+    background: #ff9b9b;
+    line-height: 60px;
+    font-size: 24px;
+    color: black;
+}
 .petition-calendar-date {
     border: 1px solid #CCC;
     border-radius: 20px;
@@ -124,30 +145,31 @@ text:first-of-type {
 .chart rect:nth-of-type(2) {
   color: #fff;
   stroke: transparent;
-  fill: #1c2d41;
+  fill: #7385df;
 }
 
 text:nth-of-type(2) {
-  fill: #a8d4e4;
+  fill: #fff;
   font-family: sans-serif;
   font-size: 12px;
 }
 /* Chart End */
 
 .petition-people-area {
-    padding: 39px;
+    /* padding: 39px; */
     text-align: center;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 div#percentageChart {
     /* border: 2px solid #999; */
-    padding: 10px;
+    /* padding: 10px; */
     text-align: center;
+    margin-top: 30px;
 }
 
 span.petition-people {
-    display: block;
+    display: inline-block;
     border-radius: 10px;
     padding: 5px 10px;
     margin-right: 5px;
@@ -157,9 +179,9 @@ span.petition-people {
 }
 
 span.petition-people-cnt {
-    display: block;
+    display: inline-block;
     font-size: 21px;
-    margin-top: 6px;
+    margin-top: 2px;
 }
 
 p.petition-end-text {
@@ -176,10 +198,9 @@ p.petition-end-text {
 }
 
 .petition-body {
-    border-top: 1px solid #CCC;
-    border-bottom: 1px solid #CCC;
-    margin: 30px 0;
-    padding: 20px 0;
+    border-top: 1px solid #CCC;;
+    margin: 20px 0;
+    padding: 40px 0;
     text-align: left;
 }
 
@@ -193,7 +214,6 @@ p.petition-end-text {
 
 .petition-link-area {
     text-align: left;
-    border-bottom: 1px solid #CCC;
     border-top: 1px solid #CCC;
     margin: 20px 0;
     padding: 20px 0;
@@ -242,7 +262,9 @@ p.petition-end-text {
     padding: 10px;
     display: inline-block;
 }
-
+.petition-area-wrap {
+    border-bottom: 2px solid #999;
+}
 .petition-link-area > button {
     width: 93px;
     height: 50px;
