feat : 청원자 - 청원보기 뷰수정/ 답변자 - 답변작성 콘트롤수정/ 답변자 - 답변보기 제작중

--- a/WebContent/resource/petition/petition.css
+++ b/WebContent/resource/petition/petition.css
@@ -1,13 +1,24 @@
 section.petition-container {
-    width: 800px;
     margin: 0 auto;
-    padding: 30px 0;
-    font-size: 16px;
+    padding: 10px 0;
+    font-size: 14px;
 }
 
 .petition-header {
     display: inline-block;
     width: 100%;
+}
+
+.petition-info-area {
+	width: 800px;
+    height: 50px;
+    background: #E6E6E6;
+    color: #848484;
+    border-radius: 3px;
+    display: inline-block;
+    line-height: 50px;
+    text-align: center;
+    margin-left:50px;
 }
 
 ul.petition-state-list {
@@ -20,7 +31,7 @@ ul.petition-state-list {
 }
 
 ul.petition-state-list > li > .line-box {
-    width: 95px;
+    width: 120px;
     height: 50px;
     background: #CCC;
     border-radius: 3px;
@@ -29,6 +40,7 @@ ul.petition-state-list > li > .line-box {
     line-height: 50px;
     text-align: center;
     vertical-align: top;
+    font-size:12pt;
 }
 
 ul.petition-state-list > li.on > .line-box {
@@ -47,13 +59,7 @@ ul.petition-state-list > li.on > .line-box {
 
 ul.petition-state-list > li {display: inline-block;}
 
-.petition-header-left {
-    display: inline-block;
-    float: left;
-    width: 70%;
-}
 
-.petition-header-right {display: inline-block;float: left;width: 30%;}
 
 .petition-title-area {
     /* border-bottom: 2px solid #999; */
@@ -88,6 +94,7 @@ span.petition-title {
     margin-top: 10px;
 }
 
+
 .petition-writer span:first-child {border-radius: 10px;padding: 5px 10px;margin-right: 5px;font-weight: 700;vertical-align: top;border: 1px solid #AAA;}
 
 .petition-calendar {
@@ -108,14 +115,15 @@ span.petition-title {
 }
 
 span.petition-dday {
-    width: 60px;
+    width: 65px;
     display: inline-block;
     vertical-align: bottom;
     height: 60px;
-    background: #ff9b9b;
+    background: #F5A9D0;
     line-height: 60px;
     font-size: 24px;
-    color: black;
+    color: #585858;
+    text-align:center;
 }
 .petition-calendar-date {
     border: 1px solid #CCC;
@@ -168,21 +176,7 @@ div#percentageChart {
     margin-top: 30px;
 }
 
-span.petition-people {
-    display: inline-block;
-    border-radius: 10px;
-    padding: 5px 10px;
-    margin-right: 5px;
-    font-weight: 700;
-    vertical-align: top;
-    border: 1px solid #AAA;
-}
 
-span.petition-people-cnt {
-    display: inline-block;
-    font-size: 21px;
-    margin-top: 2px;
-}
 
 p.petition-end-text {
     margin-top: 10px;
@@ -221,13 +215,24 @@ p.petition-end-text {
 
 .petition-link-area > a {
     border: 1px solid #DDD;
-    width: calc(100% - 99px);
+    width: 100%;
     display: inline-block;
     line-height: 50px;
     height: 50px;
     margin-bottom: 5px;
     text-align: left;
 }
+
+.petition-link-area2 > a {
+    border: 1px solid #DDD;
+    width: 800px;
+    display: inline-block;
+    line-height: 45px;
+    height: 45px;
+    margin-bottom: 5px;s
+    text-align: left;
+}
+
 
 .petition-url-area {
     text-align: left;
@@ -275,5 +280,6 @@ p.petition-end-text {
     line-height: 50px !importanr;
     text-align: center;
     vertical-align: top;
+    align: center;
     /* border: none; */
 }
