--- a/WebContent/resource/petition/petition.css
+++ b/WebContent/resource/petition/petition.css
@@ -12,7 +12,8 @@ section.petition-container {
 .petition-info-area {
 	width: 800px;
     height: 50px;
-    background: #E6E6E6;
+    border:1px solid black;
+    background: #F2F2F2;
     color: #848484;
     border-radius: 3px;
     display: inline-block;
@@ -66,7 +67,7 @@ ul.petition-state-list > li {display: inline-block;}
     padding: 10px;
     height: 90px;
     text-align: left;
-    font-size: 22px;
+    font-size: 23px;
     text-overflow: ellipsis;
     white-space: nowrap;
     word-wrap: normal;
@@ -193,8 +194,8 @@ p.petition-end-text {
 
 .petition-body {
     border-top: 1px solid #CCC;;
-    margin: 20px 0;
-    padding: 40px 0;
+    margin-top: 20px;
+    padding: 20px 0;
     text-align: left;
 }
 
@@ -209,7 +210,6 @@ p.petition-end-text {
 .petition-link-area {
     text-align: left;
     border-top: 1px solid #CCC;
-    margin: 20px 0;
     padding: 20px 0;
 }
 
